# pam-discord

./: 4f8e8fe0-0a6b-42ea-8044-d50c9ed1e794-megalinter_file_names_cspell.txt  Cargo.toml  Justfile  README.md  install.sh
conf/: discord-auth
discord/: Cargo.toml
discord/src/: lib.rs
metadata/: Cargo.toml
metadata/src/: lib.rs
src/: lib.rs
